--- a/index.css
+++ b/index.css
@@ -142,26 +142,20 @@ header {
 .carousel-item-wrapper {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 14.5rem);
   transition: transform .7s ease-in-out;
   transform: translate3d(0, 0, 0);
   will-change: transform;
-  /* overflow: hidden; */
+  overflow: hidden;
   /* backface-visibility: hidden; */
 }
 
-.carousel-item-wrapper img {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
 .carousel-item {
-  /* display: none; */
+  display: block;
   width: 100%;
+  min-width: 100%;
   height: calc(100vh - 14.5rem);
 }
-
 
 .item1 {
   background-image: url('images/bg1.jpg');
