--- a/index.css
+++ b/index.css
@@ -59,8 +59,6 @@ img {
   position: relative;
   width: 100%;
   height: 100%;
-  /* max-width: 100%;
-  display: block; */
 }
 
 header {
@@ -496,6 +494,10 @@ header {
   grid-auto-rows: 0;
 }
 
+.masonry__image {
+  max-width: 100%;
+  display: block;
+}
 
 
 /* 반응형 */
